Is getting freaking awesome

--- a/Filter_summary.html
+++ b/Filter_summary.html
@@ -100,8 +100,9 @@ System Settings</A>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/auto/d/diallo/Cours/3A/A14/A14-2/project/dev/vhdl/isim.log'>ISIM Simulator Log</A></TD><TD>Current</TD><TD COLSPAN='2'>Wed Oct 22 10:52:09 2014</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 10/21/2014 - 19:32:26</center>
+<br><center><b>Date Generated:</b> 10/22/2014 - 13:22:47</center>
 </BODY></HTML>
